# cosmostat

./: .editorconfig  .gitattributes  .gitignore  README.md  mypy.ini  pyproject.toml  setup.py  tasks.py  tox.ini
conda/env-specs/: default-win.yml  default.yml
src/chisquarecosmo/: __init__.py  chi_square.py  constants_units.py  cosmology.py  exceptions.py  likelihood.py  util.py
src/chisquarecosmo/cli/: chi_square_fit.py  chi_square_grid.py  confidence_intervals.py  describe_fit.py  describe_fit_legacy.py  info.py  main.py  util.py
src/chisquarecosmo/data/: __init__.py  bao_data.py  hz_data.py  sneia_union2_1.py  union2.txt
src/chisquarecosmo/legacy/: Cosmology_DE.py  chi_square.py  likelihood.py  wz_BA.py  wz_geom.py  wz_gus.py  wz_seos.py
src/chisquarecosmo/legacy/Statistics/: chi2_likelihood.py  mcmc.py  mcmc_b.py
src/chisquarecosmo/models/: __init__.py  cpl.py  one.py
src/cosmostat/: __init__.py  chi_square.py  constants_units.py  cosmology.py  exceptions.py  likelihood.py  util.py
src/cosmostat/cli/: __init__.py  chi_square_fit.py  chi_square_grid.py  describe_fit.py  describe_fit_legacy.py  info.py  main.py
src/cosmostat/data/: Hznewdata.txt  __init__.py  bao_data.py  cov_mat_nosyst_u21.txt  hz_data.py  jla_mub_complete.txt  sneia_bdata.py  sneia_union2_1.py
src/cosmostat/legacy/: Cosmology_DE.py  chi_square.py  likelihood.py  wz_BA.py  wz_CPL.py  wz_geom.py  wz_gus.py  wz_seos.py
src/cosmostat/legacy/Statistics/: chi2_likelihood.py  mcmc.py  mcmc_b.py
src/cosmostat/models/: __init__.py  cpl.py  one.py
tests/chisquarecosmo/: test_chi_square.py  test_eos_cpl.py  test_eos_one.py
tests/cosmostat/: test_chi_square.py  test_eos_cpl.py  test_eos_one.py
